# ppx_easy_deriving

./: README.md  bench.txt  dune-project  ppx_easy_deriving-bench.opam  ppx_easy_deriving.opam  ppx_easy_deriving.opam.template
.github/workflows/: ci.yml
example/ppx_easy_equal/: dune  ppx_easy_equal.ml
example/ppx_easy_equal_bench/: bench.ml  dune
example/ppx_easy_equal_bench/ppx_type_directed_equal/: dune  ppx_type_directed_equal.ml  ppx_type_directed_equal.mli
example/ppx_easy_equal_test/: dune  ppx_easy_equal_test.expected.ml  ppx_easy_equal_test.ml
example/ppx_lattice/: dune  ppx_lattice.ml
example/ppx_lattice_test/: dune  ppx_lattice_test.expected.ml  ppx_lattice_test.ml
src/: convert.ml  deriver.ml  deriver.mli  deriver_intf.ml  dune  intf.ml  patExp.ml  patExp.mli  ppx_easy_deriving.ml  product.ml  product.mli  product_intf.ml  simple.ml  simple.mli  simple_intf.ml  util.ml
src/runtime/: dune
