; https://tarides.com/blog/2019-05-09-an-introduction-to-ocaml-ppx-ecosystem#testing-your-ppx

; check compilation
(test
 (name ppx_easy_equal_test)
 (modules ppx_easy_equal_test)
 (preprocess (pps ppx_easy_equal)))

; check preprocessing
(executable
 (name pp)
 (modules pp)
 (libraries ppxlib ppx_easy_equal))

(rule
 (targets ppx_easy_equal_test.actual.ml)
 (deps (:pp pp.exe) (:input ppx_easy_equal_test.ml))
 (action (run ./%{pp} -deriving-keep-w32 both --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action (diff ppx_easy_equal_test.expected.ml ppx_easy_equal_test.actual.ml)))
