; https://tarides.com/blog/2019-05-09-an-introduction-to-ocaml-ppx-ecosystem#testing-your-ppx

; check compilation
(test
 (name ppx_lattice_test)
 (modules ppx_lattice_test)
 (preprocess (pps ppx_lattice)))

; check preprocessing
(executable
 (name pp)
 (modules pp)
 (libraries ppxlib ppx_lattice))

(rule
 (targets ppx_lattice_test.actual.ml)
 (deps (:pp pp.exe) (:input ppx_lattice_test.ml))
 (action (run ./%{pp} -deriving-keep-w32 both --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action (diff ppx_lattice_test.expected.ml ppx_lattice_test.actual.ml)))
